# deepin-shortcut-viewer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  README.zh_CN.md  commandlinemanager.cpp  commandlinemanager.h  dde-shortcut-viewer.pro  deepin-shortcut-viewer.pro  main.cpp  singleapplication.cpp  singleapplication.h
.reuse/: dep5
cutelogger/: CuteLogger_global.h  Logger.cpp  RollingFileAppender.cpp  RollingFileAppender.h  logmanager.cpp  logmanager.h
debian/: changelog  control  copyright  rules
doc/: README.md
rpm/: deepin-shortcut-viewer.spec
view/: mainwidget.cpp  mainwidget.h  shortcutitem.cpp  shortcutitem.h  shortcutscene.cpp  shortcutscene.h  shortcutview.cpp  shortcutview.h
